[chore][deploy] Fix docker build and deploy store and proxy